Issue with footer not reaching the bottom. Solved by taking off the vh for project gallery. I created a project gallery section in css. Aligned text to center, wisth 100% and padding bottom 200px. This allows for space between the section and footer. H2 is color the neutral, font size is 2.5rem and padding 40px. Ul has a padding of 40px. the images in the li have width of 100%, height of 35vh, background color of red, (this is for styling visuals only) border radius of 20px, and a transsiton of .5s ease. Lastly, the hover for the image has transform of scale(11.1 and transition to the images.

--- a/CSS/homepage.css
+++ b/CSS/homepage.css
@@ -12,7 +12,9 @@
     --neutral-color: #e2b969;
     --font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;}
 
-.body {
+body {
+    display: flex;
+    flex-direction: column;
     font-family: var(--font-family);
     background-color: #f5f5f5;
     color: #333;
@@ -63,7 +65,6 @@ nav {
     height: 10vh;
     background-color: #fff ;
     padding: 15px;
-    position: sticky;
 }
 
 ul {
@@ -115,4 +116,42 @@ a:hover {
     font-weight: 600;
 }
 
+/* Projects */
 
+.project-gallery {
+    text-align: center;
+    width: 100%;
+    padding-bottom: 200px;
+}
+
+.project-gallery h2 {
+    color: var(--neutral-color);
+    font-size: 2.5rem;
+    padding: 40px;
+}
+
+.project-gallery ul {
+    padding-top: 40px;
+}
+
+li img {
+    width: 100%;
+    height: 35vh;
+    background-color: var(--red-color);
+    border-radius: 20px;
+    transition: transform 0.5s ease;
+}
+
+li img:hover {
+    transform: scale(1.1);
+    transition: transform 0.5s ease;
+}
+
+/* FOOTER */
+footer {
+    background-color: var(--orange-color);
+    width: 100%;
+    text-align: center;
+    color: #1b1b1b;
+    padding: 20px;
+}
